--- a/index.html
+++ b/index.html
@@ -29,19 +29,19 @@
             <div class="text-white">
               <div class="d-flex">
                 <div class="text-white pe-5">
-                  <i class="fa-solid fa-check 4x"></i>
+                  <i class="fa-solid fa-check 4x primary"></i>
                 </div>  
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi sed accusantium tenetur blanditiis iure numquam!</p>
               </div>
               <div class="d-flex">
                 <div class="pe-5">
-                  <i class="fa-solid fa-check"></i>
+                  <i class="fa-solid fa-check primary"></i>
                 </div>                
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi sed accusantium tenetur blanditiis iure numquam!</p>
               </div>
               <div class="d-flex">
                 <div class="pe-5">
-                  <i class="fa-solid fa-check"></i>
+                  <i class="fa-solid fa-check primary"></i>
                 </div>  
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi sed accusantium tenetur blanditiis iure numquam!</p>
               </div>
