--- a/index.html
+++ b/index.html
@@ -25,25 +25,25 @@
       <div class="dark-overlay">
         <div class="row m-auto">
           <div class="col-8">
-            <h1 class="text-white">Build <strong>social profiles</strong> and gain revenue <strong>profits</strong></h1>
+            <h1 class="text-white display-4 mb-4">Build <strong>social profiles</strong> and gain revenue <strong>profits</strong></h1>
             <div class="text-white">
-              <div class="d-flex">
-                <div class="text-white pe-5">
-                  <i class="fa-solid fa-check 4x primary"></i>
+              <div class="d-flex align-items-center m-2">
+                <div class="text-primary bg-light rounded p-2 me-5">
+                  <i class="fa-solid fa-check fa-2xl"></i>
                 </div>  
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi sed accusantium tenetur blanditiis iure numquam!</p>
+                <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi sed accusantium tenetur blanditiis iure numquam!</p>
               </div>
-              <div class="d-flex">
-                <div class="pe-5">
-                  <i class="fa-solid fa-check primary"></i>
+              <div class="d-flex align-items-center  m-2">
+                <div class="text-primary bg-light rounded p-2 me-5">
+                  <i class="fa-solid fa-check fa-2xl"></i>
                 </div>                
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi sed accusantium tenetur blanditiis iure numquam!</p>
+                <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi sed accusantium tenetur blanditiis iure numquam!</p>
               </div>
-              <div class="d-flex">
-                <div class="pe-5">
-                  <i class="fa-solid fa-check primary"></i>
+              <div class="d-flex align-items-center  m-2">
+                <div class=" text-primary bg-light rounded p-2 me-5 ">
+                  <i class="fa-solid fa-check fa-2xl"></i>
                 </div>  
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi sed accusantium tenetur blanditiis iure numquam!</p>
+                <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi sed accusantium tenetur blanditiis iure numquam!</p>
               </div>
             </div>            
           </div>
