modified html and css

--- a/index.html
+++ b/index.html
@@ -22,24 +22,24 @@
       </div>
     </nav>
     <header>
-      <div class="dark-overlay">
+      <div class="container dark-overlay">
         <div class="row m-auto">
           <div class="col-8">
             <h1 class="text-white display-4 mb-4">Build <strong>social profiles</strong> and gain revenue <strong>profits</strong></h1>
             <div class="text-white">
-              <div class="d-flex align-items-center m-2">
+              <div class="d-flex align-items-center m-5">
                 <div class="text-primary bg-light rounded p-2 me-5">
                   <i class="fa-solid fa-check fa-2xl"></i>
                 </div>  
                 <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi sed accusantium tenetur blanditiis iure numquam!</p>
               </div>
-              <div class="d-flex align-items-center  m-2">
+              <div class="d-flex align-items-center  m-5">
                 <div class="text-primary bg-light rounded p-2 me-5">
                   <i class="fa-solid fa-check fa-2xl"></i>
                 </div>                
                 <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi sed accusantium tenetur blanditiis iure numquam!</p>
               </div>
-              <div class="d-flex align-items-center  m-2">
+              <div class="d-flex align-items-center  m-5">
                 <div class=" text-primary bg-light rounded p-2 me-5 ">
                   <i class="fa-solid fa-check fa-2xl"></i>
                 </div>  
@@ -47,30 +47,66 @@
               </div>
             </div>            
           </div>
-          <div class="col-4 text-white">
-            <h2>Sign Up Today</h2>
-            <h5>Please fill out this form to register</h5>  
-            <form action="">
-              <input type="text" placeholder="username">
-              <label for=""></label>
-            </form>
-            <form action="">
-              <input type="email" placeholder="email">
-              <label for=""></label>
-            </form>
-            <form action="">
-              <input type="password" placeholder="password">
-              <label for=""></label>
-            </form>
-            <form action="">
-              <input type="password" placeholder="confirm password">
-              <label for=""></label>
-            </form>
-            <button>Submit</button>
+          <div class="card col-4 text-white bg-primary rounded  mb-3">
+            <div class="card-body">  
+              <h3 class="text-center">Sign Up Today</h3>
+              <p class="text-center">Please fill out this form to register</p>  
+              <form action="">
+                <input type="text" class="form-control form-control-lg" placeholder="username">
+                <label for=""></label>
+              </form>
+              <form action="">
+                <input type="email" class="form-control form-control-lg" placeholder="email">
+                <label for=""></label>
+              </form>
+              <form action="">
+                <input type="password" class="form-control form-control-lg" placeholder="password">
+                <label for=""></label>
+              </form>
+              <form action="">
+                <input type="password" class="form-control form-control-lg" placeholder="confirm password">
+                <label for=""></label> 
+              </form>
+              <input type="submit" class="btn btn-outline-light btn-block w-100">          
+            </div>                  
           </div>
         </div>
       </div>
     </header>
+    <section id="explore-head-section">
+      <div class="bg-dark">
+        <div class="container d-flex flex-column align-items-center justify-content text-center pt-5 pb-5">
+          <h1 class="display-4 text-white">Explore</h1>
+          <p class="text-center text-white">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente doloribus ut iure itaque quibusdam rem accusantium deserunt reprehenderit sunt minus.</p>
+          <a class="btn btn btn-outline-secondary btn-block">Find out more</a>
+        </div>          
+      </div>
+    </section>
+    <section id="explore-connect">
+      <div class="container row">
+        <img src="./image/explore-section1.jpg" class="rounded-pill col" alt="">
+        <div class="col">
+          <h1 class="text-secondary display-4 mb-4">Build <strong>social profiles</strong> and gain revenue <strong>profits</strong></h1>
+          <div class="text-secondary">
+            <div class="d-flex align-items-center m-5">
+              <div class="text-white bg-dark rounded p-2 me-5">
+                <i class="fa-solid fa-check fa-2xl"></i>
+              </div>  
+              <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi sed accusantium tenetur blanditiis iure numquam!</p>
+            </div>
+          </div>
+            <div class="text-secondary">
+              <div class="d-flex align-items-center m-5">
+                <div class="text-white bg-dark rounded p-2 me-5">
+                  <i class="fa-solid fa-check fa-2xl"></i>
+                </div>  
+                <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi sed accusantium tenetur blanditiis iure numquam!</p>
+              </div>
+            
+
+
+      </div>
+    </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
