--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </nav>
     <header>
       <div class="container dark-overlay">
-        <div class="row m-auto">
+        <div class="row main-header m-auto">
           <div class="col-8">
             <h1 class="text-white display-4 mb-4">Build <strong>social profiles</strong> and gain revenue <strong>profits</strong></h1>
             <div class="text-white">
@@ -83,10 +83,11 @@
       </div>
     </section>
     <section id="explore-connect">
-      <div class="container row">
-        <img src="./image/explore-section1.jpg" class="rounded-pill col" alt="">
+      <div class="container row m-auto pb-5 pt-5">
+        <img src="./image/explore-section1.jpg" class="rounded-circle w-25 col" alt="">
         <div class="col">
-          <h1 class="text-secondary display-4 mb-4">Build <strong>social profiles</strong> and gain revenue <strong>profits</strong></h1>
+          <h3 class="text-secondary mb-4"><strong>Explore & Connect</strong></h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam praesentium reprehenderit dignissimos cupiditate sunt adipisci.</p>
           <div class="text-secondary">
             <div class="d-flex align-items-center m-5">
               <div class="text-white bg-dark rounded p-2 me-5">
@@ -101,10 +102,78 @@
                   <i class="fa-solid fa-check fa-2xl"></i>
                 </div>  
                 <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi sed accusantium tenetur blanditiis iure numquam!</p>
-              </div>
-            
-
-
+               </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="create-section">
+      <div class="bg-primary">
+        <div class="container d-flex flex-column align-items-center justify-content text-center pt-5 pb-5">
+          <h1 class="display-4 text-white">Create</h1>
+          <p class="text-center text-white">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente doloribus ut iure itaque quibusdam rem accusantium deserunt reprehenderit sunt minus.</p>
+          <a class="btn btn-outline-light btn-block">Find out more</a>
+        </div>          
+      </div>
+    </section>
+    <section id="explore-connect" class="bg-dark">
+      <div class="container row m-auto pb-5 pt-5"> 
+        <!--Sol frame-->
+        <div class="col">
+          <h3 class="text-white mb-4">Create Your Passion</h3>
+          <p class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa omnis laboriosam cum sit necessitatibus dicta atque beatae asperiores nihil. Rerum.</p>
+          <div class="text-white">
+            <div class="d-flex align-items-center m-5">
+              <div class="text-primary bg-light rounded p-2 me-5">
+                <i class="fa-solid fa-check fa-2xl"></i>
+              </div>  
+              <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi sed accusantium tenetur blanditiis iure numquam!</p>
+            </div>
+            <div class="d-flex align-items-center  m-5">
+              <div class="text-primary bg-light rounded p-2 me-5">
+                <i class="fa-solid fa-check fa-2xl"></i>
+              </div>                
+              <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi sed accusantium tenetur blanditiis iure numquam!</p>
+            </div>
+          </div>         
+        </div> 
+        <img src="./image/create-section1.jpg" class="rounded-circle w-25 col" alt="">
+      </div>
+    </section>
+    <section id="share-section">
+      <div class="bg-primary">
+        <div class="container d-flex flex-column align-items-center justify-content text-center pt-5 pb-5">
+          <h1 class="display-4 text-white">Share</h1>
+          <p class="text-center text-white">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente doloribus ut iure itaque quibusdam rem accusantium deserunt reprehenderit sunt minus.</p>
+          <a class="btn btn-outline-light btn-block">Find out more</a>
+        </div>          
+      </div>
+    </section>
+    <section id="explore-connect">
+      <div class="container row m-auto pb-5 pt-5">
+        <img src="./image/share-section1.jpg" class="rounded-circle w-25 col" alt="">
+        <div class="col">
+          <h3 class="text-secondary mb-4"><strong>Share What You Create</strong></h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit, facilis? Nam dicta tenetur iusto incidunt consequuntur error cumque nostrum soluta!</p>
+          <div class="text-secondary">
+            <div class="d-flex align-items-center m-5">
+              <div class="text-white bg-dark rounded p-2 me-5">
+                <i class="fa-solid fa-check fa-2xl"></i>
+              </div>  
+              <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi sed accusantium tenetur blanditiis iure numquam!</p>
+            </div>
+          </div>
+            <div class="text-secondary">
+              <div class="d-flex align-items-center m-5">
+                <div class="text-white bg-dark rounded p-2 me-5">
+                  <i class="fa-solid fa-check fa-2xl"></i>
+                </div>  
+                <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi sed accusantium tenetur blanditiis iure numquam!</p>
+               </div>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
