--- a/index.html
+++ b/index.html
@@ -176,6 +176,15 @@
         </div>
       </div>
     </section>
+    <footer class="bg-dark">
+      <div class="d-flex flex-column justify-content-center align-items-center p-5">
+        <h3 class=" text-white">LoopLAB</h3>
+        <p class="text-white">Copyright © 2023</p>
+        <a class="btn btn-primary">Find out more</a>
+
+      </div>
+
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
